--- a/style.css
+++ b/style.css
@@ -69,10 +69,73 @@ nav li a{
     width: 90%;
 }
 
+main{
+    margin: 0 120px;
+}
 
-
-
-
+.companies{
+    margin: 35px 0;
+    display: flex;
+    justify-content: space-around;
+}
+.popular-collection{
+    margin: 80px 0;
+}
+.popular-collection-title{
+    color: #3A3A3A;
+    text-align: center;
+    font-size: 1.75rem;
+    font-weight: 600;
+}
+.collection-card{
+    margin: 20px 50px 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 20px;
+}
+.card{
+    max-width: 329px;
+    border-radius: 5px;
+    background-color: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    padding: 15px;
+}
+.card-title{
+    color: #18191F;
+    font-size: 1.75rem;
+    font-weight: 500;
+}
+.card-price{
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin: 10px 0;
+}
+.card-ratings{
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+}
+.rating-text{
+    color: #5E6366;
+    font-size: 0.875rem;
+    font-weight: 700;
+    margin-left: 5px;
+}
+.card-description{
+    max-width: 196px;
+    color: #787885;
+    font-size: 0.875rem;
+    font-weight: 700;
+}
+.see-more{
+    text-align: right;
+    margin-top: 50px;
+    margin-right: 100px;
+    color: rgba(224, 44, 109, 0.87);
+    font-size: 1rem;
+    font-weight: 700;
+}
 
 @media screen and (max-width: 576px) {
     nav{
