--- a/style.css
+++ b/style.css
@@ -136,8 +136,64 @@ main{
     font-size: 1rem;
     font-weight: 700;
 }
+.featured-product{
+    display: flex;
+    align-items: center;
+    gap: 100px;
+}
+.featured-title{
+    color: #0A0826;
+    font-size: 2.375rem;
+    font-weight: 700;
+}
+.featured-description{
+    max-width: 501px;
+    color: #6C6C6C;
+    font-size: 1rem;
+    font-weight: 700;
+}
+.join-now{
+    background-color: #E02C6D;
+    margin-top: 20px;
+    padding: 10px 24px;
+    color: #FFF;
+    font-size: 1rem;
+    font-weight: 700;
+    border: 0;
+}
+.footer{
+    max-width: 1440px;
+    margin: 100px auto 0;
+    background-color: #0A0826;
+    color: #FFF;
+    text-align: center;
+    padding: 50px 0;
+}
+.footer-title{
+    margin-bottom: 10px;
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+.footer-description{
+    color: #D9DBE1;
+    font-size: 0.875rem;
+    font-weight: 400;
+}
+.icons{
+    margin-top: 10px;
+    display: inline-flex;
+    gap: 10px;
+}
+
+
+
+
+
 
 @media screen and (max-width: 576px) {
+    header{
+        margin: 10px 20px;
+    }
     nav{
         flex-direction: column;
     }
@@ -153,5 +209,59 @@ main{
     }
     .banner-description{
         max-width: 100%;
+    }
+    .banner-img{
+        max-width: 360px;
+        margin-bottom: 20px;
+    }
+    .banner-img img{
+        width: 100%;
+    }
+    main{
+        margin: 0 20px;
+    }
+    .banner-btn{
+        margin-bottom: 20px;
+    }
+    .companies{
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+    .collection-card{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .see-more{
+        margin-right: 20px;
+    }
+    .featured-product{
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+}
+
+
+@media screen and (min-width: 576px) and (max-width: 940px) {
+    header{
+        margin: 10px 20px;
+    }
+    .banner{
+        flex-direction: column-reverse;
+    }
+    .banner-content{
+        text-align: center;
+    }
+    .banner-title{
+        max-width: 100%;
+        font-size: 1.75rem;
+    }
+    .banner-description{
+        max-width: 90%;
+        margin: 0 auto;
+    }
+    main{
+        margin: 0 20px;
+    }
+    .collection-card{
+        grid-template-columns: repeat(2, 1fr);
     }
 }
